--- a/provisioning/subcase-1a/roles/instructor_console/tasks/main.yml
+++ b/provisioning/subcase-1a/roles/instructor_console/tasks/main.yml
@@ -1,25 +1,38 @@
 ---
-- name: Install instructor tooling
-  ansible.builtin.apt:
-    name: "{{ instructor_console_packages | default(['tmux', 'htop']) }}"
-    state: present
-    update_cache: true
-
-- name: Configure instructor notes workspace
+- name: Ensure instructor console workspace exists
   ansible.builtin.file:
-    path: /home/ubuntu/rep-notes
+    path: "{{ instructor_console_workspace }}"
     state: directory
-    owner: ubuntu
-    group: ubuntu
-    mode: '0750'
+    owner: "{{ instructor_console_user }}"
+    group: "{{ instructor_console_user }}"
+    mode: "0750"
 
-- name: Deploy welcome message
-  ansible.builtin.copy:
-    dest: /home/ubuntu/rep-notes/README.txt
-    content: |
-      Random Education Platform – Instructor Console
-      -----------------------------------------------
-      Use this folder to store agendas, collaborative links and post-session summaries.
-    owner: ubuntu
-    group: ubuntu
-    mode: '0640'
+- name: Deploy tmux configuration for instructor console
+  ansible.builtin.template:
+    src: tmux.conf.j2
+    dest: "{{ instructor_console_tmux_conf }}"
+    owner: "{{ instructor_console_user }}"
+    group: "{{ instructor_console_user }}"
+    mode: "0640"
+  notify: reload profile for instructor console
+
+- name: Publish instructor console shell shortcuts
+  ansible.builtin.template:
+    src: instructor-console.sh.j2
+    dest: "{{ instructor_console_aliases }}"
+    owner: root
+    group: root
+    mode: "0755"
+  notify: reload profile for instructor console
+
+- name: Validate tmux configuration
+  ansible.builtin.command: "tmux -f {{ instructor_console_tmux_conf }} display-message"
+  register: instructor_console_tmux_validation
+  changed_when: false
+  failed_when: instructor_console_tmux_validation.rc != 0
+
+- name: Verify instructor console shortcuts are executable
+  ansible.builtin.command: "bash -lc 'source {{ instructor_console_aliases }} && type -t {{ instructor_console_shortcuts[0].name | upper }}'"
+  register: instructor_console_shortcuts_check
+  changed_when: false
+  failed_when: instructor_console_shortcuts_check.stdout.strip() != 'function'
