--- a/provisioning/subcase-1a/roles/rep_core/tasks/main.yml
+++ b/provisioning/subcase-1a/roles/rep_core/tasks/main.yml
@@ -1,24 +1,76 @@
 ---
-- name: Ensure apt cache is up to date
-  ansible.builtin.apt:
-    update_cache: true
-    cache_valid_time: 3600
-
-- name: Install REP backend packages
-  ansible.builtin.apt:
-    name: "{{ rep_core_packages | default(['nginx', 'python3-venv']) }}"
-    state: present
-
-- name: Enable nginx service
-  ansible.builtin.service:
-    name: nginx
-    enabled: true
-    state: started
-
-- name: Create REP configuration directory
+- name: Ensure REP directories exist
   ansible.builtin.file:
-    path: /opt/rep/config
+    path: "{{ item }}"
     state: directory
-    owner: ubuntu
-    group: ubuntu
-    mode: '0755'
+    owner: root
+    group: root
+    mode: "0750"
+  loop:
+    - /etc/nginx/sites-available
+    - /etc/nginx/sites-enabled
+    - /etc/nginx/tls
+    - /etc/rep/credentials
+
+- name: Deploy REP core nginx configuration
+  ansible.builtin.template:
+    src: nginx-rep-core.conf.j2
+    dest: /etc/nginx/sites-available/rep_core.conf
+    owner: root
+    group: root
+    mode: "0640"
+  notify: reload nginx
+
+- name: Enable REP core virtual host
+  ansible.builtin.file:
+    src: /etc/nginx/sites-available/rep_core.conf
+    dest: /etc/nginx/sites-enabled/rep_core.conf
+    state: link
+  notify: reload nginx
+
+- name: Install TLS certificate for REP core
+  ansible.builtin.copy:
+    dest: "{{ rep_core_tls.certificate_path }}"
+    content: "{{ rep_core_tls.certificate_content }}"
+    owner: root
+    group: root
+    mode: "0640"
+  when: rep_core_tls.certificate_content | length > 0
+  notify: reload nginx
+
+- name: Install TLS private key for REP core
+  ansible.builtin.copy:
+    dest: "{{ rep_core_tls.key_path }}"
+    content: "{{ rep_core_tls.key_content }}"
+    owner: root
+    group: root
+    mode: "0600"
+  when: rep_core_tls.key_content | length > 0
+  notify: reload nginx
+  no_log: true
+
+- name: Provision shared secret for internal APIs
+  ansible.builtin.copy:
+    dest: "{{ rep_core_shared_secret_file }}"
+    content: "{{ rep_core_shared_secret }}"
+    owner: root
+    group: rep
+    mode: "0640"
+  when: rep_core_shared_secret | length > 0
+  no_log: true
+
+- name: Validate nginx configuration syntax
+  ansible.builtin.command: nginx -t
+  register: rep_core_nginx_check
+  changed_when: false
+  failed_when: rep_core_nginx_check.rc != 0
+
+- name: Check REP core health endpoint
+  ansible.builtin.uri:
+    url: "{{ rep_core_healthcheck.url }}"
+    method: GET
+    status_code: {{ rep_core_healthcheck.status_code | int }}
+    validate_certs: {{ rep_core_healthcheck.validate_certs | bool }}
+  register: rep_core_health
+  failed_when: rep_core_health.status != rep_core_healthcheck.status_code
+  changed_when: false
