--- a/provisioning/subcase-1a/roles/trainee_workstation/tasks/main.yml
+++ b/provisioning/subcase-1a/roles/trainee_workstation/tasks/main.yml
@@ -1,13 +1,36 @@
 ---
-- name: Ensure folders for trainee resources exist
+- name: Ensure REP data directory exists
   ansible.windows.win_file:
-    path: "{{ item }}"
+    path: "{{ trainee_workstation_collector.directory }}"
     state: directory
-  loop: "{{ trainee_workspace_resources | default(['C:\\Labs', 'C:\\Labs\\Evidence']) }}"
+  when: ansible_facts.os_family | default('') == 'Windows'
 
-- name: Place orientation note for trainees
-  ansible.windows.win_copy:
-    dest: C:\Labs\WELCOME.txt
-    content: |
-      Welcome to the Random Education Platform phishing awareness lab.
-      Use the Evidence folder to store artefacts requested by the instructor.
+- name: Deploy collector configuration
+  ansible.windows.win_template:
+    src: collector.yaml.j2
+    dest: "{{ trainee_workstation_collector.config_path }}"
+  when: ansible_facts.os_family | default('') == 'Windows'
+  notify: restart rep collector
+  no_log: true
+
+- name: Publish trainee shortcuts
+  ansible.windows.win_template:
+    src: shortcut.url.j2
+    dest: "{{ shortcut.path }}"
+  loop: "{{ trainee_workstation_shortcuts | list }}"
+  loop_control:
+    loop_var: shortcut
+  when: ansible_facts.os_family | default('') == 'Windows'
+
+- name: Ensure collector service is running
+  ansible.windows.win_service:
+    name: "{{ trainee_workstation_collector.service_name }}"
+    state: started
+  when: ansible_facts.os_family | default('') == 'Windows'
+
+- name: Validate collector service status
+  ansible.windows.win_shell: "{{ trainee_workstation_health_command }}"
+  register: trainee_collector_health
+  changed_when: false
+  failed_when: trainee_collector_health.rc != 0 or 'Running' not in trainee_collector_health.stdout
+  when: ansible_facts.os_family | default('') == 'Windows'
