--- a/provisioning/subcase-1d/roles/ng_siem/tasks/main.yml
+++ b/provisioning/subcase-1d/roles/ng_siem/tasks/main.yml
@@ -1,31 +1,30 @@
 ---
-- name: Install NG-SIEM packages
-  ansible.builtin.apt:
-    name: "{{ ng_siem_packages | default(['openjdk-17-jdk', 'rsyslog']) }}"
-    state: present
-    update_cache: true
-
-- name: Ensure rsyslog is enabled
-  ansible.builtin.service:
-    name: rsyslog
-    enabled: true
-    state: started
-
-- name: Ensure NG-SIEM configuration directory exists
+- name: Ensure ng-siem pipeline directory exists
   ansible.builtin.file:
-    path: /etc/ng-siem
+    path: "{{ ng_siem_pipeline_config | dirname }}"
     state: directory
     owner: root
-    group: root
-    mode: '0755'
+    group: ng-siem
+    mode: "0750"
 
-- name: Deploy placeholder correlation profile
-  ansible.builtin.copy:
-    dest: /etc/ng-siem/correlation.conf
-    content: |
-      [default]
-      description = Sample correlation profile for CyberRangeCZ lab
-      enabled = true
+- name: Configure ng-siem pipeline
+  ansible.builtin.template:
+    src: pipeline.conf.j2
+    dest: "{{ ng_siem_pipeline_config }}"
     owner: root
-    group: root
-    mode: '0644'
+    group: ng-siem
+    mode: "0640"
+  notify: reload ng-siem pipelines
+  no_log: true
+
+- name: Validate ng-siem pipeline configuration
+  ansible.builtin.command: "ng-siemctl pipeline lint {{ ng_siem_pipeline.name }} --config {{ ng_siem_pipeline_config }}"
+  register: ng_siem_lint
+  changed_when: false
+  failed_when: ng_siem_lint.rc != 0
+
+- name: Check ng-siem pipeline status
+  ansible.builtin.command: "{{ ng_siem_healthcheck.command }}"
+  register: ng_siem_status
+  changed_when: false
+  failed_when: ng_siem_status.rc != 0 or 'healthy' not in ng_siem_status.stdout.lower()
