--- a/provisioning/subcase-1d/roles/ng_soc/tasks/main.yml
+++ b/provisioning/subcase-1d/roles/ng_soc/tasks/main.yml
@@ -1,20 +1,32 @@
 ---
-- name: Install NG-SOC required packages
-  ansible.builtin.apt:
-    name: "{{ ng_soc_packages | default(['docker.io', 'python3-pip']) }}"
-    state: present
-    update_cache: true
-
-- name: Ensure docker service is running
-  ansible.builtin.service:
-    name: docker
-    enabled: true
-    state: started
-
-- name: Configure NG-SOC workspace directory
+- name: Ensure ng-soc configuration directory exists
   ansible.builtin.file:
-    path: /opt/ng-soc/workspace
+    path: "{{ ng_soc_dashboard_config | dirname }}"
     state: directory
-    owner: ubuntu
-    group: ubuntu
-    mode: '0755'
+    owner: root
+    group: ng-soc
+    mode: "0750"
+
+- name: Deploy ng-soc dashboard configuration
+  ansible.builtin.template:
+    src: dashboard.yaml.j2
+    dest: "{{ ng_soc_dashboard_config }}"
+    owner: root
+    group: ng-soc
+    mode: "0640"
+  notify: reload ng-soc dashboard
+
+- name: Validate ng-soc configuration
+  ansible.builtin.command: "ng-socctl validate --config {{ ng_soc_dashboard_config }}"
+  register: ng_soc_validate
+  changed_when: false
+  failed_when: ng_soc_validate.rc != 0
+
+- name: Check ng-soc API status
+  ansible.builtin.uri:
+    url: "{{ ng_soc_healthcheck.url }}"
+    method: GET
+    status_code: {{ ng_soc_healthcheck.status_code | int }}
+  register: ng_soc_health
+  failed_when: ng_soc_health.status != ng_soc_healthcheck.status_code
+  changed_when: false
