--- a/provisioning/subcase-1d/roles/playbook_library/tasks/main.yml
+++ b/provisioning/subcase-1d/roles/playbook_library/tasks/main.yml
@@ -1,27 +1,35 @@
 ---
-- name: Install playbook library packages
-  ansible.builtin.apt:
-    name: "{{ playbook_library_packages | default(['git', 'nginx']) }}"
-    state: present
-    update_cache: true
+- name: Ensure playbook library root exists
+  ansible.builtin.file:
+    path: "{{ playbook_library_root }}"
+    state: directory
+    owner: root
+    group: cacao
+    mode: "0750"
 
-- name: Ensure nginx service is enabled
-  ansible.builtin.service:
-    name: nginx
-    enabled: true
-    state: started
+- name: Deploy CACAO playbooks
+  ansible.builtin.template:
+    src: playbook.json.j2
+    dest: "{{ playbook_library_root }}/{{ playbook.id }}.json"
+    owner: root
+    group: cacao
+    mode: "0640"
+  loop: "{{ playbook_library_playbooks | list }}"
+  loop_control:
+    loop_var: playbook
+  notify: reload cacao playbooks
 
-- name: Publish reference index
-  ansible.builtin.copy:
-    dest: /var/www/html/index.html
-    content: |
-      <html>
-      <head><title>CyberRangeCZ Playbook Library</title></head>
-      <body>
-        <h1>CyberRangeCZ Playbook Library</h1>
-        <p>Use this portal to document CACAO playbooks, MITRE ATT&CK coverage and NVD/NIST references.</p>
-      </body>
-      </html>
-    owner: www-data
-    group: www-data
-    mode: '0644'
+- name: Publish playbook index metadata
+  ansible.builtin.template:
+    src: index.json.j2
+    dest: "{{ playbook_library_metadata }}"
+    owner: root
+    group: cacao
+    mode: "0640"
+  notify: reload cacao playbooks
+
+- name: Validate CACAO library
+  ansible.builtin.command: "{{ playbook_library_healthcheck_command }}"
+  register: playbook_library_validation
+  changed_when: false
+  failed_when: playbook_library_validation.rc != 0
