--- a/provisioning/subcase-1d/roles/telemetry_feeder/tasks/main.yml
+++ b/provisioning/subcase-1d/roles/telemetry_feeder/tasks/main.yml
@@ -1,24 +1,33 @@
 ---
-- name: Install telemetry simulator packages
-  ansible.builtin.apt:
-    name: "{{ telemetry_feeder_packages | default(['python3-venv', 'rsyslog']) }}"
-    state: present
-    update_cache: true
-
-- name: Create telemetry scenario directory
+- name: Ensure telemetry feeder configuration directory exists
   ansible.builtin.file:
-    path: /opt/telemetry-simulator/scenarios
+    path: "{{ telemetry_feeder_agent_config | dirname }}"
     state: directory
-    owner: ubuntu
-    group: ubuntu
-    mode: '0755'
+    owner: root
+    group: telemetry
+    mode: "0750"
 
-- name: Provide sample log generator script
-  ansible.builtin.copy:
-    dest: /opt/telemetry-simulator/scenarios/generate.sh
-    content: |
-      #!/usr/bin/env bash
-      logger "CyberRangeCZ telemetry event: $(date --iso-8601=seconds)"
-    owner: ubuntu
-    group: ubuntu
-    mode: '0755'
+- name: Deploy telemetry feeder agent configuration
+  ansible.builtin.template:
+    src: agent.yaml.j2
+    dest: "{{ telemetry_feeder_agent_config }}"
+    owner: root
+    group: telemetry
+    mode: "0640"
+  notify: restart telemetry feeder
+  no_log: true
+
+- name: Validate telemetry feeder configuration
+  ansible.builtin.command: "telemetry-feederctl lint --config {{ telemetry_feeder_agent_config }}"
+  register: telemetry_feeder_lint
+  changed_when: false
+  failed_when: telemetry_feeder_lint.rc != 0
+
+- name: Check telemetry feeder health endpoint
+  ansible.builtin.uri:
+    url: "{{ telemetry_feeder_healthcheck_url }}"
+    method: GET
+    status_code: 200
+  register: telemetry_feeder_health
+  failed_when: telemetry_feeder_health.status != 200
+  changed_when: false
