--- a/provisioning/subcase-1a/roles/trainee_workstation/defaults/main.yml
+++ b/provisioning/subcase-1a/roles/trainee_workstation/defaults/main.yml
@@ -18,3 +18,9 @@ trainee_workstation_shortcuts:
     url: https://rep-core.internal/live
     icon: C:\\Program Files\\Internet Explorer\\iexplore.exe
 trainee_workstation_health_command: "Get-Service -Name REPCollector"
+trainee_workstation_welcome_note:
+  directory: C:\\Labs
+  filename: WELCOME.txt
+  content: |
+    Welcome to the Random Education Platform lab environment.
+    Follow your instructor's guidance to complete the phishing awareness exercises.
