Ensure grafana account exists for reporting workspace role

--- a/provisioning/subcase-1a/roles/reporting_workspace/tasks/main.yml
+++ b/provisioning/subcase-1a/roles/reporting_workspace/tasks/main.yml
@@ -1,4 +1,15 @@
 ---
+- name: Ensure grafana group exists
+  ansible.builtin.group:
+    name: grafana
+    system: true
+
+- name: Ensure grafana user exists
+  ansible.builtin.user:
+    name: grafana
+    group: grafana
+    system: true
+
 - name: Ensure Grafana provisioning directories exist
   ansible.builtin.file:
     path: "{{ item }}"
