--- a/provisioning/subcase-1a/roles/instructor_console/tasks/main.yml
+++ b/provisioning/subcase-1a/roles/instructor_console/tasks/main.yml
@@ -1,4 +1,10 @@
----
+- name: Ensure instructor console user exists
+  ansible.builtin.user:
+    name: "{{ instructor_console_user }}"
+    group: "{{ instructor_console_user }}"
+    shell: /bin/bash
+    create_home: true
+
 - name: Ensure instructor console workspace exists
   ansible.builtin.file:
     path: "{{ instructor_console_workspace }}"
