Ensure instructor console group exists

--- a/provisioning/subcase-1a/roles/instructor_console/tasks/main.yml
+++ b/provisioning/subcase-1a/roles/instructor_console/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: Ensure instructor console group exists
+  ansible.builtin.group:
+    name: "{{ instructor_console_user }}"
+    system: true
+
 - name: Ensure instructor console user exists
   ansible.builtin.user:
     name: "{{ instructor_console_user }}"
