Ensure cacao group exists for playbook library

--- a/provisioning/subcase-1d/roles/playbook_library/tasks/main.yml
+++ b/provisioning/subcase-1d/roles/playbook_library/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: Ensure cacao group exists
+  ansible.builtin.group:
+    name: cacao
+    system: true
+
 - name: Ensure playbook library root exists
   ansible.builtin.file:
     path: "{{ playbook_library_root }}"
